User API implementation
